@startuml
class option.printOption.CountPrintOption {
+ String report(ArrayList<Employee>,String)
}
class option.printOption.ListPrintOption {
+ String report(ArrayList<Employee>,String)
}
interface option.printOption.IPrintOption {
~ String report(ArrayList<Employee>,String)
}


option.printOption.IPrintOption <|.. option.printOption.CountPrintOption
option.printOption.IPrintOption <|.. option.printOption.ListPrintOption
@enduml